# inception

./: Cargo.toml  README.md
crates/test-inception/: Cargo.toml
crates/test-inception/src/: example.rs  main.rs
src/: errors.rs  helper.rs  lib.rs
src/expand/: functions.rs  matching.rs  mod.rs  parser.rs
src/macros/: delimiter.rs  derive_args.rs  expand.rs  literal.rs  macro_rule.rs  match_rule.rs  mod.rs  path.rs  punct.rs  rule.rs  visibility.rs
src/macros/pattern/: mod.rs  pattern_group.rs  pattern_matcher.rs  patterns.rs  repeat.rs
src/macros/replacement/: expr.rs  mod.rs  replacement_group.rs  replacements.rs  special_replacement.rs
src/old/: mod.rs
src/old/parser/: mod.rs  path.rs  patterns.rs  replacements.rs
src/rules/: mod.rs
src/rules/parser/: mod.rs  path.rs  patterns.rs  replacements.rs
