[workspace]
members = [".", "crates/test-inception"]

[package]
name = "inception"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.94", features = ["nightly"] }

[dependencies.syn]
version = "2.0.100"
default-features = false
features = ["parsing", "proc-macro", "clone-impls"]

# [profile.dev.build-override]
# opt-level = 2
